# asset-allocator

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.md  sample_answers.json  sample_budget.csv  sample_holdings.csv  sample_portfolio.json
src/asset_allocator/: __init__.py  __main__.py  allocation.py  budget.py  cli.py  config.py  contribute.py  goals.py  history.py  holdings_io.py  i18n.py  models.py  profile.py  projection.py  report.py  store.py  taxlot.py  valuation.py  web.py
src/asset_allocator/prices/: __init__.py  base.py  coingecko.py  stooq.py
tests/: conftest.py  test_allocation.py  test_budget.py  test_cli.py  test_contribute.py  test_goals.py  test_history.py  test_holdings_io.py  test_i18n.py  test_prices.py  test_profile.py  test_projection.py  test_report.py  test_store.py  test_taxlot.py  test_valuation.py  test_web.py
tests/fixtures/: coingecko_demo.json  stooq_demo.csv
