[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-allocator"
version = "0.7.0"
description = "Keyless CLI + local web app for personal portfolio planning: risk quiz, target allocation, DCA + cash-flow tracker, 2032/2042 goal tracking, CSV import/export, snapshot history, growth projection, daily P&L, and a localizable (English/Vietnamese) offline dashboard with editable detail views and charts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "baronguyen001" }]
keywords = ["asset allocation", "portfolio", "rebalancing", "personal finance", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
web = ["flask>=3.0"]
dev = [
  "flask>=3.0",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "responses>=0.25",
  "ruff>=0.5",
]

[project.scripts]
allocate = "asset_allocator.cli:main"

[project.urls]
Homepage = "https://github.com/baronguyen001/asset-allocator"
Issues = "https://github.com/baronguyen001/asset-allocator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
asset_allocator = ["web_assets/*.js"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --disable-warnings"
